--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": ">=0.21.1",
     "cross-env": "^7.0.3",
     "feed": "^4.2.2",
+    "mermaid": "^10.0.2",
     "next": "^12.1.0",
     "notion-client": "^4.19.8",
     "notion-utils": "^4.19.8",
