--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": ">=0.21.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "feed": "^4.2.2",
     "mermaid": "9.3.0",
     "next": "^12.1.0",
